# wgpu-fundamentals

./: Cargo.toml  README.md
ch01/: wgpu_info.txt
ch01/01_wgpu_info/: app.rs  main.rs  state.rs
ch02/01_triangle_vertex_color/: main.rs
ch02/02_triangle_primitive/: main.rs
ch02/03_triangle_gpu_buffer/: app.rs  main.rs  state.rs  vertex.rs
ch02/04_line_msaa/: app.rs  main.rs  state.rs  triangle_gpu_buffer.wgsl
ch02/common/: app.rs  state.rs
ch03/01_cube_rotation/: app.rs  main.rs  state.rs  vertex.rs
ch03/02_cube_wireframe/: main.rs  state.rs  vertex.rs
ch03/03_sphere_wireframe/: main.rs  state.rs  vertex.rs
ch03/04_cylinder_wireframe/: main.rs  state.rs  vertex.rs
ch03/05_torus_wireframe/: main.rs  state.rs  vertex.rs
ch03/common/: app.rs  unlit.wgsl
src/: lib.rs  vertex_data.rs  wgpu_simplified.rs
